packages/cashc/test/compiler/ParseError/full_iso_date.cash
pragma radiantscript ^0.1.0;

contract Test() {
    return {
        test() {
            require(tx.time >= date("2021-03-03T05:30:00.000Z"));
        }
    }
}
